create Project working, mostly